# paneru

./: .gitignore  CONFIGURATION.md  Cargo.toml  QUERY_AND_SUBSCRIBE_FORMAT.md  README.md  flake.nix
src/: accessibility_prompt.rs  commands.rs  config.rs  ecs.rs  events.rs  main.rs  manager.rs  menubar.rs  reader.rs  tests.rs
src/commands/: query.rs
src/config/: swipe.rs
src/ecs/: display.rs  focus.rs  layout.rs  mouse.rs  params.rs  restore.rs  scroll.rs  state.rs  systems.rs  triggers.rs  workspace.rs
src/manager/: app.rs  layout.rs  windows.rs
src/platform/: input.rs  notify.rs
src/tests/: harness.rs  interaction.rs  mocks.rs  state.rs  tiling.rs
